# Mixtaper

./: README.md
client/: package-lock.json  package.json  tailwind.config.ts
client/src/: app.css
client/src/components/: chip.svelte  level.svelte  topbar.svelte
client/src/lib/: Types.ts  index.ts  levels.ts
client/src/routes/: +page.svelte
client/src/routes/level/: +page.svelte  stat.svelte
client/src/routes/login/: +page.svelte
client/src/routes/search/: +page.svelte
client/src/routes/settings/: +page.svelte  field.svelte
client/src/routes/signup/: +page.svelte
client/src/routes/upload/: +page.svelte  field.svelte
client/src/routes/user/: +page.svelte  stat.svelte
client/src/routes/verify_email/: +page.svelte
client/static/: logo.pdn
playgrounds/: go.mod  main.go
server/: .env.dist  .gitignore  Cargo.toml  go.mod  go.sum  main.go
server/routes/: change_bio.go  change_display_name.go  change_password.go  change_username.go  delete_level.go  download_riq.go  edit_level.go  get_level.go  get_levels_from_user.go  get_my_id.go  get_user.go  login.go  post_level.go  recent_levels.go  search.go  send_email_verification.go  signup.go  upload_cover_art.go  upload_pfp.go  upload_riq.go  verify_email.go
server/src/: main.rs
server/src/modules/: appwrite_tools.rs
server/src/routes/: login.rs  signup.rs  upload_riq.rs
server/utils/: appwrite_tools.go  levels.go  response.go  riq.go  users.go
