[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-files = "0.6"
sqlx = { version = "0.8", features = [ "runtime-tokio", "tls-rustls-ring", "postgres" ] }
dotenv = "0.15.0"
serde = "1.0.216"
actix-cors = "0.7.0"
base64 = "0.22.1"
jsonwebtoken = "9.3.0"
chrono = "0.4.39"
serde_json = "1.0.134"
bcrypt = "0.16.0"